@@ -1,5 +1,11 @@
 package fi.fisma.backend.security;
 
+import com.nimbusds.jose.jwk.JWK;
+import com.nimbusds.jose.jwk.JWKSet;
+import com.nimbusds.jose.jwk.RSAKey;
+import com.nimbusds.jose.jwk.source.ImmutableJWKSet;
+import com.nimbusds.jose.jwk.source.JWKSource;
+import com.nimbusds.jose.proc.SecurityContext;
 import java.security.KeyFactory;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
@@ -7,7 +13,7 @@ import java.security.spec.PKCS8EncodedKeySpec;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.List;
-
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -28,125 +34,115 @@ import org.springframework.security.oauth2.jwt.NimbusJwtEncoder;
 import org.springframework.security.oauth2.server.resource.web.BearerTokenAuthenticationEntryPoint;
 import org.springframework.security.oauth2.server.resource.web.access.BearerTokenAccessDeniedHandler;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import com.nimbusds.jose.jwk.JWK;
-import com.nimbusds.jose.jwk.JWKSet;
-import com.nimbusds.jose.jwk.RSAKey;
-import com.nimbusds.jose.jwk.source.ImmutableJWKSet;
-import com.nimbusds.jose.jwk.source.JWKSource;
-import com.nimbusds.jose.proc.SecurityContext;
-
-import lombok.RequiredArgsConstructor;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-    private final UserDetailsServiceImpl userDetailsService;
+  private final UserDetailsServiceImpl userDetailsService;
 
-    @Value("${jwt.public.key}")
-    RSAPublicKey key;
+  @Value("${jwt.public.key}")
+  RSAPublicKey key;
 
-    @Bean
-    @Profile("default")
-    public RSAPrivateKey privateKey(@Value("${jwt.private.key}") RSAPrivateKey privateKey) {
-        return privateKey;
-    }
+  @Bean
+  @Profile("default")
+  public RSAPrivateKey privateKey(@Value("${jwt.private.key}") RSAPrivateKey privateKey) {
+    return privateKey;
+  }
 
-    @Bean
-    @Profile("aws")
-    public RSAPrivateKey privateKeyAws(@Value("${jwt.private.key}") String privateKeyStr) throws Exception {
-        return parsePrivateKey(privateKeyStr);
-    }
+  @Bean
+  @Profile("aws")
+  public RSAPrivateKey privateKeyAws(@Value("${jwt.private.key}") String privateKeyStr)
+      throws Exception {
+    return parsePrivateKey(privateKeyStr);
+  }
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        // @formatter:off
-        http
-                .authorizeHttpRequests((authorize) -> authorize
-                        .requestMatchers(
-                            AntPathRequestMatcher.antMatcher("/v3/api-docs"),
-                            AntPathRequestMatcher.antMatcher("/v3/api-docs.yaml"),
-                            AntPathRequestMatcher.antMatcher("/v3/api-docs/**"),
-                            AntPathRequestMatcher.antMatcher("/swagger-ui.html"),
-                            AntPathRequestMatcher.antMatcher("/swagger-ui/**")
-                        ).permitAll()
-                        .anyRequest().authenticated()
-                )
-                .cors(Customizer.withDefaults())
-                .csrf((csrf) -> csrf.ignoringRequestMatchers("/token"))
-                .httpBasic(Customizer.withDefaults())
-                .oauth2ResourceServer((oauth2) -> oauth2.jwt(Customizer.withDefaults()))
-                .sessionManagement((session) -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .exceptionHandling((exceptions) -> exceptions
-                        .authenticationEntryPoint(new BearerTokenAuthenticationEntryPoint())
-                        .accessDeniedHandler(new BearerTokenAccessDeniedHandler())
-                );
-        // @formatter:on
-        return http.build();
-    }
+  @Bean
+  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    // @formatter:off
+    http.authorizeHttpRequests(
+            (authorize) ->
+                authorize
+                    .requestMatchers("/actuator/health")
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated())
+        .cors(Customizer.withDefaults())
+        .csrf((csrf) -> csrf.ignoringRequestMatchers("/token"))
+        .httpBasic(Customizer.withDefaults())
+        .oauth2ResourceServer((oauth2) -> oauth2.jwt(Customizer.withDefaults()))
+        .sessionManagement(
+            (session) -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .exceptionHandling(
+            (exceptions) ->
+                exceptions
+                    .authenticationEntryPoint(new BearerTokenAuthenticationEntryPoint())
+                    .accessDeniedHandler(new BearerTokenAccessDeniedHandler()));
+    // @formatter:on
+    return http.build();
+  }
 
-    @Bean
-    PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+  @Bean
+  PasswordEncoder passwordEncoder() {
+    return new BCryptPasswordEncoder();
+  }
 
-    @Bean
-    public AuthenticationManager authenticationManager() {
-        DaoAuthenticationProvider autProvider = new DaoAuthenticationProvider();
-        autProvider.setPasswordEncoder(passwordEncoder());
-        autProvider.setUserDetailsService(userDetailsService);
-        return new ProviderManager(autProvider);
-    }
+  @Bean
+  public AuthenticationManager authenticationManager() {
+    DaoAuthenticationProvider autProvider = new DaoAuthenticationProvider();
+    autProvider.setPasswordEncoder(passwordEncoder());
+    autProvider.setUserDetailsService(userDetailsService);
+    return new ProviderManager(autProvider);
+  }
 
-    @Bean
-    JwtDecoder jwtDecoder() {
-        return NimbusJwtDecoder.withPublicKey(this.key).build();
-    }
+  @Bean
+  JwtDecoder jwtDecoder() {
+    return NimbusJwtDecoder.withPublicKey(this.key).build();
+  }
 
-    @Bean
-    @Profile("default")
-    JwtEncoder jwtEncoder(RSAPrivateKey privateKey) {
-        JWK jwk = new RSAKey.Builder(this.key).privateKey(privateKey).build();
-        JWKSource<SecurityContext> jwks = new ImmutableJWKSet<>(new JWKSet(jwk));
-        return new NimbusJwtEncoder(jwks);
-    }
+  @Bean
+  @Profile("default")
+  JwtEncoder jwtEncoder(RSAPrivateKey privateKey) {
+    JWK jwk = new RSAKey.Builder(this.key).privateKey(privateKey).build();
+    JWKSource<SecurityContext> jwks = new ImmutableJWKSet<>(new JWKSet(jwk));
+    return new NimbusJwtEncoder(jwks);
+  }
 
-    @Bean
-    @Profile("aws")
-    JwtEncoder jwtEncoderAws(RSAPrivateKey privateKeyAws) {
-        JWK jwk = new RSAKey.Builder(this.key).privateKey(privateKeyAws).build();
-        JWKSource<SecurityContext> jwks = new ImmutableJWKSet<>(new JWKSet(jwk));
-        return new NimbusJwtEncoder(jwks);
-    }
+  @Bean
+  @Profile("aws")
+  JwtEncoder jwtEncoderAws(RSAPrivateKey privateKeyAws) {
+    JWK jwk = new RSAKey.Builder(this.key).privateKey(privateKeyAws).build();
+    JWKSource<SecurityContext> jwks = new ImmutableJWKSet<>(new JWKSet(jwk));
+    return new NimbusJwtEncoder(jwks);
+  }
 
-    @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("https://fisma-benefit-app.github.io", "http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        configuration.setExposedHeaders(List.of("Location")); // TODO: This cause problems. Fix it!
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+  @Bean
+  CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(
+        List.of("https://fisma-benefit-app.github.io", "http://localhost:5173"));
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+    configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+    configuration.setExposedHeaders(List.of("Location")); // TODO: This cause problems. Fix it!
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
+  }
 
-    private RSAPrivateKey parsePrivateKey(String privateKeyStr) throws Exception {
-        String privateKeyPEM = privateKeyStr
-                .replace("-----BEGIN PRIVATE KEY-----", "")
-                .replace("-----END PRIVATE KEY-----", "")
-                .replaceAll("\\s+", "");
+  private RSAPrivateKey parsePrivateKey(String privateKeyStr) throws Exception {
+    String privateKeyPEM =
+        privateKeyStr
+            .replace("-----BEGIN PRIVATE KEY-----", "")
+            .replace("-----END PRIVATE KEY-----", "")
+            .replaceAll("\\s+", "");
 
-        byte[] decodedKey = Base64.getDecoder().decode(privateKeyPEM);
-        PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decodedKey);
-        KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+    byte[] decodedKey = Base64.getDecoder().decode(privateKeyPEM);
+    PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decodedKey);
+    KeyFactory keyFactory = KeyFactory.getInstance("RSA");
 
-        return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
-    }
-
+    return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
+  }
 }
